--- a/colorGame.html
+++ b/colorGame.html
@@ -2,11 +2,15 @@
 <html>
 <head>
 	<title>Color Game</title>
+	 <!-- Link to bootstrap -->
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<!-- Link to CSS -->
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
+
 <body>
 
-	<h1>The Great RGB color game</h1>
+	<h1>The Great <span id="colorDisplay">RGB</span> color game</h1>
 
 	<div id="container">
 		<div class="square"></div>
@@ -16,6 +20,7 @@
 		<div class="square"></div>
 		<div class="square"></div>
 	</div>
+
 <script type="text/javascript" src="colorGame.js"></script>
 </body>
 </html>
